--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
                <div class="col-md-4 col-sm-6">
                    <div class="services-detail">
-                       <i class="fa fa-tablet color-2"></i>
+                       <i class="fa fa-trophy color-2"></i>
                        <h3>Roles and Responsibilities</h3>
                        <hr>
                         <ul>
@@ -397,7 +397,7 @@
 
                <div class="col-md-4 col-sm-6">
                    <div class="services-detail">
-                       <i class="fa fa-html5 color-5"></i>
+                       <i class="fa fa-terminal color-5"></i>
                        <h3>Programming Languages</h3>
                        <hr>
                         <ul>
