--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
          <div class="row">
            <div class="col-md-12">   
              
-             <h2>Want to get in touch me?</h2>
+             <h2>Want to get in touch with me?</h2>
              
              <div class="text-center margin-top-20">
           <a class="button button-style button-style-dark button-style-icon fa fa-long-arrow-right smoth-scroll" href="#contact">Contact Me</a>
